--- a/src/style.css
+++ b/src/style.css
@@ -356,9 +356,8 @@ button:focus {
   width: 40px !important;
   height: 40px !important;
   text-align: center !important;
-  font-size: 1.2em !important;
   line-height: 2em !important;
-  background: rgba(255, 255, 255, 0.972) !important;
+  /* background: rgba(255, 255, 255, 0.972) !important; */
   border-radius: 50% !important;
   transition: 0.5s !important;
 }
@@ -371,7 +370,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background: #68187a;
+  background: #ffffff;
   transition: 0.5s;
   transform: scale(0.9);
   z-index: -1;
@@ -395,7 +394,7 @@ button:focus {
 }
 
 .icon-colour {
-  color: #700c86 !important;
+  color: #ffffff !important;
 }
 
 /* --------- */
